# uno-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  index.html  shell.nix  tools.nix
src/: app.rs  file.rs  hooks.rs  lib.rs  main.rs
src/components/: navbar.rs
src/routes/: home.rs  login.rs  mod.rs  register.rs  todo.rs
uno-backend/: Cargo.toml  dist
uno-backend/src/: main.rs
uno-core/: Cargo.toml
uno-core/src/: chat.rs  lib.rs  snowflake.rs  user.rs
uno-frontend/: Cargo.toml  Trunk.toml  chat.css  index.html  style.css  tailwind.config.js
uno-frontend/src/: components.rs  lib.rs  main.rs  router.rs
uno-frontend/src/components/: chat.rs  login_form.rs  navbar.rs  register_form.rs
uno-frontend/src/router/views/: home.rs  login.rs  mod.rs  register.rs
