[package]
name = "uno-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { git = "https://github.com/gbj/leptos", default-features = false }
leptos_axum = { git = "https://github.com/gbj/leptos", default-features = false, optional = true }
leptos_config = { git = "https://github.com/gbj/leptos", default-features = false}
leptos_meta = { git = "https://github.com/gbj/leptos",  default-features = false }
leptos_router = { git = "https://github.com/gbj/leptos", default-features = false }
axum = { version = "*", optional = true}
cfg-if = "*"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.3.5", features = ["fs"], optional = true }
tokio = { version = "1.23.0", features = ["full"], optional = true }
http = { version = "0.2.8", optional = true }
sqlx = { version = "0.6.2", features = [
	"runtime-tokio-rustls",
	"sqlite",
], optional = true }
futures = "0.3.25"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio", "dep:http", "dep:sqlx", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos_axum"]


[package.metadata.leptos]
output-name = "uno_rs"	
site-root = "target/site"
site-pkg-dir = "pkg" 	
style-file = "src/styles/output.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"	
reload-port = 3001	
end2end-cmd = "npx playwright test"

browserquery = "defaults" 	

watch = false 	

env = "DEV"

bin-features = ["ssr"]

bin-default-features = false

lib-features = ["hydrate"]

lib-default-features = false
