[package]
name = "uno-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uno-core = { path = "../uno-core/" }
uno-frontend = { path = "../uno-frontend" }
yew = { version="0.20", features = ["ssr", "hydration"] }
actix-web = "4.2.1"
tokio = { version = "1.22.0", features = ["full"] }
actix-files = "0.6.2"
