[package]
name = "uno-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uno-core = { path = "../uno-core/" }
uno-frontend = { path = "../uno-frontend" }
leptos = "*"
leptos_actix = { version = "*", optional = true }
leptos_router = "*"
leptos_meta = "*"
actix-web = { version = "4.2.1", optional = true }
tokio = { version = "1.22.0", features = ["full"] }
actix-files = { version = "0.6.2", optional = true }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate",  "leptos_router/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
