[package]
name = "uno-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
coarsetime = "0.1.22"
serde = { version = "1.0", features = ["derive"] }
