[package]
name = "uno-frontend"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uno-core = { path = "../uno-core/" }
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
yew = { version = "0.20", features = ["csr"] }
chrono = "0.4.23"
yew-router = "0.17"
